testsuite/tests/module/mod120.stderr

mod120.hs:5:5: error: [GHC-88464]
    Data constructor not in scope: Foo
